add invocation test